@@ -15,9 +15,7 @@
  */
 package com.intellij.updater;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 public class PatchSpec {
   private String myOldVersionDescription = "";
@@ -27,13 +25,12 @@ public class PatchSpec {
   private String myPatchFile;
   private String myJarFile;
   private boolean myIsStrict;
-  private List<String> myIgnoredFiles = Collections.emptyList();
-  private List<String> myCriticalFiles = Collections.emptyList();
+  private List<String> myIgnoredFiles = List.of();
+  private List<String> myCriticalFiles = List.of();
   // A conflict in an essential file makes a patch update impossible; the IDE must be reinstalled from scratch.
-  private List<String> myStrictFiles = Collections.emptyList();
-  private List<String> myOptionalFiles = Collections.emptyList();
-  private Map<String, String> myWarnings = Collections.emptyMap();
-  private List<String> myDeleteFiles = Collections.emptyList();
+  private List<String> myStrictFiles = List.of();
+  private List<String> myOptionalFiles = List.of();
+  private List<String> myDeleteFiles = List.of();
   private String myRoot = "";
   private int myTimeout = 0;
 
@@ -134,15 +131,6 @@ public class PatchSpec {
   public PatchSpec setOptionalFiles(List<String> optionalFiles) {
     myOptionalFiles = optionalFiles;
     return this;
-  }
-
-  public PatchSpec setWarnings(Map<String, String> warnings) {
-    myWarnings = warnings;
-    return this;
-  }
-
-  public Map<String, String> getWarnings() {
-    return myWarnings;
   }
 
   public PatchSpec setDeleteFiles(List<String> deleteFiles) {
